RESOLVED FIXED161620
[Win] Null pointer crash under WebView::scrollOffset.
https://bugs.webkit.org/show_bug.cgi?id=161620
Summary [Win] Null pointer crash under WebView::scrollOffset.
Per Arne Vollan
Reported 2016-09-06 02:34:29 PDT
Attachments
Patch (1.95 KB, patch)
2016-09-06 02:45 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2016-09-06 02:45:55 PDT
WebKit Commit Bot
Comment 2 2016-09-06 11:23:24 PDT
Comment on attachment 288005 [details] Patch Clearing flags on attachment: 288005 Committed r205495: <http://trac.webkit.org/changeset/205495>
WebKit Commit Bot
Comment 3 2016-09-06 11:23:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.