[Win] Null pointer crash under WebView::scrollOffset. https://bugs.webkit.org/show_bug.cgi?id=161620

Reviewed by Darin Adler.

Added null pointer checks.

* WebView.cpp:
(WebView::scrollOffset):
(WebView::scrollBy):
(WebView::visibleContentRect):


Canonical link: https://commits.webkit.org/179811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205495 268f45cc-cd09-0410-ab3c-d52691b4dbfc